# mako

./: .gitignore  NOTICE  Package.swift  README.md  kitten_tasks.md  summary.md
DEVLOG/kitten-coreml/: kitten-coreml-devlog.md
DEVLOG/kokoro/: kokoro-devlog.md
DEVLOG/kokoro-ssml/: kokoro-ssml-devlog.md
DEVLOG/normalizer/: normalizer-devlog.md
DEVLOG/scaffolding/: scaffolding-devlog.md
DEVLOG/speech-swift/: speech-swift-devlog.md
DEVLOG/voxtral/: voxtral-devlog.md
Sources/FluidAudioRunner/: FluidAudioRunners.swift
Sources/KittenCoreMLRunner/: KittenCoreMLEngine.swift  KittenCoreMLRunner.swift  KittenTextCleaner.swift  KittenTextPreprocessor.swift
Sources/KittenTTSRunner/: KittenTTSRunner.swift
Sources/MacTTSKit/: MacTTSKit.swift
Sources/MakoKit/: MakoKit.swift
Sources/PythonSubprocessRunner/: PythonSubprocessRunner.swift
Sources/SpeechSwiftRunner/: CosyVoiceRunner.swift  Qwen3TTSCoreMLRunner.swift
Sources/mac-tts/: DevSay.swift  (+10 more)
bug-reports/: fluidaudio-ssml-phoneme-word-index.md
python/: pyproject.toml
python/DEVLOG/kitten-coreml/: kitten-coreml-devlog.md
python/src/mac_tts_python/: __init__.py  glitch_detection.py
python/src/mac_tts_python/runners/: mlx_audio_runner.py  mlx_speech_runner.py
python/tests/: test_kitten_coreml_glitches.py
scripts/: detect_glitches.py  generate_candidates.py  generate_candidates_r2.py  inspect_best.py  ipa_ref_diff.py  phonemizer_parity.py  render_compound_split.py  render_dur_aligned_ab.py  render_period_fix.py  render_ref_ipa.py  sweep_kitten_params.py  sweep_style_row.py  token_packing_trace.py
(+60 files in other folders)
